# Medical_Chatbot_with_RAG

./: .env  .gitattributes  .gitignore  README.md  app.py  db.sqlite3  docker-compose.yml  requirements.txt  temporary.py  test.ipynb
Chatbot/: chain.py  config.py  conversation.py
Crawler/: crawl_data.ipynb
Data/Raw data/: disease_data.csv
Ecomerce/: db.sqlite3
Ecomerce/cart/: cart.py  tests.py
Ecomerce/data_comments/: comments_data_bach_hoa_online.csv  comments_data_dien_gia_dung.csv  comments_data_do_choi_me_be.csv  comments_data_lam_dep_suc_khoe.csv  comments_data_thiet_bi_kts_phu_kien_so.csv  comments_data_thoi_trang_nu.csv  data_comments_all_fixed.csv
Ecomerce/data_products/: crawled_data_bach_hoa_online.csv  (+5 more)
Model/: model.py
Preprocessing/: data_cleaning.py  merging_medical_data.py
VectorDB/: create_db.py  load_db.py  retriever.py
chatbot_api/: Dockerfile  pyproject.toml
chatbot_api/src/: main.py
chatbot_api/src/agents/: hospital_rag_agent.py
chatbot_api/src/chains/: hospital_cypher_chain.py  hospital_review_chain.py
chatbot_api/src/tools/: wait_times.py
data_comments/: check.csv  comments_data_dien_thoai_may_tinh_bang.csv  comments_data_nha_cua_doi_song.csv  comments_data_o_to_xe_may_xe_dap.csv  comments_data_the_thao_da_ngoai.csv
data_products/: crawled_data_dien_gia_dung.csv  crawled_data_dien_thoai_may_tinh_bang.csv  crawled_data_do_choi_me_be.csv  crawled_data_nha_cua_doi_song.csv  crawled_data_o_to_xe_may_xe_dap.csv
langchain_intro/: chatbot.py  create_retriever.py  tools.py
payment/: tests.py
store/: tests.py
(+67 files in other folders)
