[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    # --- Core ---
    "fastapi==0.115.11",  
    "uvicorn==0.34.0",    
    "pydantic==2.10.6",     
    
    # --- LangChain Ecosystem ---
    "langchain==0.3.21",    
    "langchain-community==0.3.20",
    "langchain-google-genai==2.0.10",
    "langchain-huggingface==0.1.2",
    "langchainhub>=0.1.14,<0.2.0",
    "langchain-neo4j==0.4.0 ", 
    
    # --- Database ---
    "neo4j==5.28.1",       
    
    # --- AI/ML ---
    "google-generativeai==0.8.4",
    "numpy==1.26.4",
    "google-ai-generativelanguage==0.6.15",              
    
    # --- Utilities ---
    "python-dotenv==1.0.1",       
    "httpx>=0.26.0",              
    "opentelemetry-api>=1.22.0",  
    
    # --- Async/Type Support ---
    "asyncio>=3.4",               
    "typing-extensions>=4.9.0"    
]

[project.optional-dependencies]
dev = ["black", "flake8"]